Fix navbar not working due to the lower z-index.
Set z-index of markdown editor in fullscreen higher than that of
the nabber (1000).

--- a/src/static/css/site.scss
+++ b/src/static/css/site.scss
@@ -33,9 +33,6 @@
 
 
 // Navbar
-body > nav.navbar {
-    z-index: -1;
-}
 .navbar-form {
     margin-right: 0px;
     margin-left: 0px;
